--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
+# Godot 4+ specific ignores
+.godot/
+
 # Godot-specific ignores
-.import/
 export.cfg
 export_presets.cfg
+
+# ignored from python util project
+*.idea/
+*__pycache__
+
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -9,3 +16,8 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash.*.json
+
+# In-progress/behind the scenes assets
+maze_assets/
+save.tres
